--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
             android:supportsRtl="true"
             android:theme="@style/Theme.BookSpace">
         <activity
+                android:name=".homeScreen"
+                android:exported="true"/>
+        <activity
                 android:name=".MainActivity"
                 android:exported="true"/>
         <activity
@@ -21,6 +24,7 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <meta-data android:name="preloaded_fonts" android:resource="@array/preloaded_fonts"/>
     </application>
 
 </manifest>
